# vm-daemon

./: Cargo.toml  Dockerfile  README.md  cloud-init.sh  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: main.rs  metric_reporter.rs  orchestrator_poller.rs
src/endpoints/: test.rs
src/models/: config.rs  metric_report.rs  mod.rs  response.rs  simulation_settings.rs
