[package]
name = "vm_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }

tokio = { version = "1.48.0", features = ["full"] }
async-trait = { version = "0.1.89" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }

tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }

openssl = { version = "0.10.76", features = ["vendored"] } # for docker image
